fixes terms and condition alignment issue for workshops pages. introduces two columns for terms and conditions, same place. Adds a backbone-js-on-rails image for implementation.

--- a/app/assets/stylesheets/_mixins.scss
+++ b/app/assets/stylesheets/_mixins.scss
@@ -17,6 +17,7 @@ $gutter: 25px; /*size of one gutter*/
 $fg-column: $unit;
 $fg-gutter: $gutter;
 $fg-max-columns: 12;
+$max-width: 1100px; // ensuring alignment between footer and content
 
 $app-width: 1122px;
 
